Fix implicit cast of enum, which seems to break the windows build of unified sources. https://bugs.webkit.org/show_bug.cgi?id=178822

Reviewed by Saam Barati.

* bytecode/DFGExitProfile.h:
(JSC::DFG::FrequentExitSite::hash const):

Canonical link: https://commits.webkit.org/194966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223971 268f45cc-cd09-0410-ab3c-d52691b4dbfc